--- a/src/common/components/App/App.css
+++ b/src/common/components/App/App.css
@@ -3,3 +3,11 @@
   padding: 0;
   margin: 0;
 }
+
+.App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  margin: 250px auto;
+}
